--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -79,4 +79,5 @@
 <%- include('../layout/alert')-%>
 </div>
 <script src="../../public/jsFiles/category.js"></script>
+<%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
