--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -106,4 +106,5 @@
     </section>
 </main>
 <script src="../../public/jsFiles/coupon.js"></script>
+<%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
