--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -10,7 +10,7 @@
 <div class="header">
     <div class="header2">
         <div class="topHeader">
-            <div><a class="left text-danger logOutButton"  title="logout" style="display:flex; justify-content: center;"><i class="bi bi-escape"></i></a></div>
+            <div><a class="left text-danger logOutButton"  title="logout" style="display:flex; justify-content: center;"><i class="bi bi-box-arrow-left"></i></a></div>
             <div class="center text-center RARE">
                 <a href="/user/home/" class="RAREHEAD">RARE KICK'S</a>
             </div>
