--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -10,8 +10,7 @@
             <div class="col-12 imageContainer" id="imageContainer1">
                 <img src="../../public/images/people-collaborating-with-tech- (1).png" class="img-fluid firstImage" alt="..." style="border-radius: 20px; ">
                 <div class="imageText">
-              <h1 class="text-center">New Collections</h1>
-              <p>" Step into style with our latest arrivals! Explore our shoe store's freshest collection, featuring trendy designs, comfort, and quality. ”</p>
+              <img src="../../public/images/logo.png" class="img-fluid " alt="">
             </div>
         </div>
         <h3 class="text-center mb-2 mt-4" style="  font-family: 'Michroma', sans-serif;">Best Sellers</h3>
