--- a/public/css/addProduct.css
+++ b/public/css/addProduct.css
@@ -4,14 +4,13 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    justify-content: center; /* This might not be necessary */
+    justify-content: center; 
     align-items: center;
     border: 1px solid rgb(172, 172, 172);
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.428);
     background-color: rgb(247, 243, 243);
     border-radius: 30px;
     width: 100%;
-
 }
 
 .submitButton {
@@ -30,11 +29,11 @@
     box-sizing: border-box; 
 }
 .input-group-text {
-    width: 120px;
-    height: 60px;
-    color: rgb(255, 255, 255);
-    background-color: rgba(0, 0, 0, 0.813);
-    border: 2px solid rgb(125, 125, 125);
+    width: 120px !important;
+    height: 60px !important;
+    color: rgb(0, 0, 0) !important;
+    background-color: rgba(255, 255, 255, 0.813) !important;
+    border: 2px solid rgb(180, 180, 180) !important;
     border-radius: 10px !important;
 }
 
@@ -47,6 +46,16 @@
     padding-left: 20px;
     box-sizing: border-box; 
 }
+
+
+.inputField,
+.inputFieldImage,
+.mainCont select,
+.mainCont textarea:focus {
+    border-color: rgb(172, 172, 172) !important; /* Change the border color to your desired color */
+    box-shadow: 0 0 0 0.2rem rgba(144, 144, 144, 0.25) !important;
+}
+
 
 .inputFieldImage {
     background-color: rgb(255, 255, 255);
@@ -106,7 +115,7 @@ input::-webkit-inner-spin-button {
 .input-group,
 .form-control{
     width: 100%;
-    margin-left: 10px !important;
     border-radius: 10px !important;
+    gap: 10px !important;
     min-width: 50vw;
 }
