--- a/public/css/adminHeader.css
+++ b/public/css/adminHeader.css
@@ -1,13 +1,10 @@
 .header{
     position: sticky;
     background-color: #ededed;
-    border-top: 0.7px solid black;
-    /* border-bottom-left-radius:30px ;
-    border-bottom-right-radius:30px ; */
     height: 160px;
     padding-bottom: 70px;
-    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.691);
-    border-bottom: 0.7px solid black;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.691);
+    border-bottom: 1px solid rgb(100, 100, 100);
     z-index: 10;
 }
 .RARE,.RAREADMIN :hover{
