--- a/public/css/glowingButton.css
+++ b/public/css/glowingButton.css
@@ -70,11 +70,12 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url('../../public/images/kn (1).png');
-    background-size: cover; 
+  background-image: url('../../public/images/logo.png');
+    background-size: contain; 
     background-position: center;
     background-repeat: no-repeat; 
   left: 0;
   top: 0;
   border-radius: 10px;
+  border: 1px solid rgb(97, 97, 97);
 }
