--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -4,13 +4,11 @@
 
 </head>
 <body>
+    <%- include('../layout/adminHeader')-%>
     <div class="backButton">
         <a href="/admin/productList">
             <button class="btn btn-dark">Back</button>
         </a>
-    </div>
-    <div class="loading-screen">
-        <span class="loader"></span>
     </div>
     <div class="container mainCont" >
         <h3 class="mt-3 text-center mb-3" style="font-family: 'Michroma', sans-serif;">Add Product</h3>
@@ -106,4 +104,5 @@
     <%- include('../layout/alert')-%>
 
 <script src="../../public/jsFiles/addProduct.js"></script>
+<%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
