review deleting fearture

--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -34,7 +34,7 @@
                 <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     Product's
                 </button>
-                <ul class="dropdown-menu bg-dark text-center p-4 dropdownHead">
+                <ul class="dropdown-menu dropdown-menu-sm-start bg-dark text-center p-4 dropdownHead">
                   <i class="fa-solid fa-angle-up text-center mt-2 mb-3 text-light "></i>
                   <li class="text-center hover  pb-4 ps-3 pe-3"><a class="" href="/user/allProducts">ALL PRODUCTS</a></li>
                   <li class="text-center hover  pb-4 ps-3 pe-3"><a class="" href="/user/brandBased">All Brands</a></li>
