--- a/views/user/detailedProduct.ejs
+++ b/views/user/detailedProduct.ejs
@@ -194,6 +194,14 @@ products?.forEach(productA => {
                             <% } %>
                         <% } %>
                     </div>
+                    <div class="d-flex justify-content-end mt-auto w-100">
+                        <button review_id="<%=review._id%>" product_id="<%=product._id%>" class="btn text-dark  editReviewButton"><i class="fa-solid fa-paintbrush"></i>
+                        </button>
+                    <% if(locals?.userId&&(review?.userId.toString()===userId?.toString())){%>
+                            <button review_id="<%=review._id%>" product_id="<%=product._id%>" class="btn text-danger deleteReviewButton "><i class="fa-solid fa-trash-can"></i>
+                            </button>
+                    <%}%>
+                    </div>
                 </div>
                 <%})%>
             <%} else {%>
@@ -204,7 +212,6 @@ products?.forEach(productA => {
                 <%}%>
         </div>
 
-    <!-- Button to Open Review Modal -->
     <button type="button" class="bookmarkBtn ms-auto my-auto me-2" data-toggle="modal" data-target="#reviewModal">
         <span class="IconContainer"> 
          <svg fill="white" viewBox="0 0 512 512" height="1em"><path d="M123.6 391.3c12.9-9.4 29.6-11.8 44.6-6.4c26.5 9.6 56.2 15.1 87.8 15.1c124.7 0 208-80.5 208-160s-83.3-160-208-160S48 160.5 48 240c0 32 12.4 62.8 35.7 89.2c8.6 9.7 12.8 22.5 11.8 35.5c-1.4 18.1-5.7 34.7-11.3 49.4c17-7.9 31.1-16.7 39.4-22.7zM21.2 431.9c1.8-2.7 3.5-5.4 5.1-8.1c10-16.6 19.5-38.4 21.4-62.9C17.7 326.8 0 285.1 0 240C0 125.1 114.6 32 256 32s256 93.1 256 208s-114.6 208-256 208c-37.1 0-72.3-6.4-104.1-17.9c-11.9 8.7-31.3 20.6-54.3 30.6c-15.1 6.6-32.3 12.6-50.1 16.1c-.8 .2-1.6 .3-2.4 .5c-4.4 .8-8.7 1.5-13.2 1.9c-.2 0-.5 .1-.7 .1c-5.1 .5-10.2 .8-15.3 .8c-6.5 0-12.3-3.9-14.8-9.9c-2.5-6-1.1-12.8 3.4-17.4c4.1-4.2 7.8-8.7 11.3-13.5c1.7-2.3 3.3-4.6 4.8-6.9c.1-.2 .2-.3 .3-.5z"></path></svg>
@@ -212,18 +219,17 @@ products?.forEach(productA => {
         <p class="text">Add Review</p>
     </button>
 
-    <!-- Review Modal -->
     <div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="reviewModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content" style="background-color: black; color: white;">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="returnModalLabel" style="font-family: 'Michroma', sans-serif;">Write Your Review!</h5>
+                    <h5 class="modal-title" id="returnModalLabel">Write Your Review!</h5>
                     <button type="button" class="close btn" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><i class="bi bi-x-square-fill" style="font-size: 30px; color: white;"></i></span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <!-- Review Form -->
+                    <label class="mt-2" for="userReview">Rating :</label>
                     <form id="reviewForm">
                         <div class="form-group rating">
                             <input value="5" name="userReviewRating" id="star5" type="radio">
@@ -238,11 +244,11 @@ products?.forEach(productA => {
                             <label for="star1"></label>
                           </div>
                         <div class="form-group">
-                            <label for="userReview">Your Review:</label>
+                            <label class="mb-3" for="userReview">Your Review:</label>
                             <textarea class="form-control" id="userReview" rows="3" required></textarea>
                         </div>
                        <div style="display: flex; ">
-                        <button type="submit" class="btn ms-auto btn-warning rounded-pill px-3 py-2 mt-2">Submit Review</button>
+                        <button type="submit" class="btn ms-auto btn-warning rounded-pill px-3 py-2 mt-2">Submit</button>
                        </div>
                     </form>
                 </div>
