--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -94,6 +94,9 @@
                 </div>
             <% }) %>
     </div>
+    <div class="d-flex  justify-content-end ">
+        <a href="/user/allProducts" class="btn me-4 btn-outline-warning   rounded-pill px-4 mainFontFamily">Show All</a>
+    </div>
 </div>
 <script src="../../public/jsFiles/homePage.js"></script>
 <script src="../../public/jsFiles/addToWishlist.js"></script>
