--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -10,7 +10,7 @@
 <div class="header">
     <div class="header2">
         <div class="topHeader">
-            <div><a class="left text-danger logOutButton"  title="logout" style="display:flex; justify-content: center;"><i class="bi bi-box-arrow-left"></i></a></div>
+            <div><a class="left text-danger logOutButton"  title="logout" style="display:flex; justify-content: center;"><i class="bi bi-chevron-left"></i></a></div>
             <div class="center text-center RARE">
                 <a href="/user/home/" class="RAREHEAD">RARE KICK'S</a>
             </div>
@@ -47,23 +47,27 @@
                   <li class="text-center hover ps-3 pe-3"><a class=" " href="/user/brand?brand=converse">CONVERSE</a></li>
                 </ul>
               </div>
-              <div class="offcanvas offcanvas-start bg-dark" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel" data-bs-scroll="false" >
+              <div class="offcanvas offcanvas-start" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel" data-bs-scroll="false" style="background: #000 !important;" >
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title text-center text-light capitalizeFirst" id="staticBackdropLabel" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 200px;"><i class="fa-regular fa-circle-user me-2 fs-4 my-auto"></i>
-                  <span class="userName"></span></h5>
-                  <button type="button" class="btn-close" id="closeButton" data-bs-dismiss="offcanvas" aria-label="Close" style="font-size: 30px; margin: 10px;"></button>
+                <h6 class="offcanvas-title text-center text-light capitalizeFirst mt-2" id="staticBackdropLabel" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 200px;">
+                    <i class="fa-solid fa-circle-user me-2 fs-3 pt-2"></i>
+                  <span class="userName"></span>
+                </h6>
+                  <button type="button" class="btn" id="closeButton" data-bs-dismiss="offcanvas" aria-label="Close">
+                    <i class="fa-solid fa-angle-left text-light"></i>
+                  </button>
                 </div>
-                <div class="offcanvas-body">
+                <div class="offcanvas-body mt-4">
                   <div class="d-flex" style="flex-direction: column; justify-content: center; row-gap: 10px;">
                    
                   <div>
-                    <a type="button" href="/user/profile" class="openButton py-3 btn btn-dark d-flex justify-content-center" style=" text-decoration: none; align-items: center;"><i class="fa-regular fa-user me-3" style="font-size: 30px;"></i>PROFILE</a>
+                    <a type="button" href="/user/profile" class="openButton py-3 btn d-flex justify-content-center rounded-pill " style=" text-decoration: none; align-items: center; background-color: #000 !important; color: white !important;"><i class="fa-regular fa-user me-3" style="font-size: 24px;"></i>PROFILE</a>
                   </div>
                   <div>
-                    <a type="button" href="/user/orders" class="openButton py-3 btn btn-dark d-flex justify-content-center" style=" text-decoration: none; align-items: center;"><i class="fa-solid fa-truck-fast me-3" style="font-size: 30px;"></i>ORDERS</a>
+                    <a type="button" href="/user/orders" class="openButton py-3 btn d-flex justify-content-center rounded-pill " style=" text-decoration: none; align-items: center; background-color: #000 !important; color: white !important;"><i class="fa-solid fa-truck-fast me-3" style="font-size: 24px;"></i>ORDERS</a>
                   </div>
                 <div class="btn-group dropdown">
-                <button type="button" class="openButton py-3 btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                <button type="button" class="openButton py-3 btn dropdown-toggle rounded-pill" data-bs-toggle="dropdown" aria-expanded="false" style="background: #000 !important; color: white !important;">
                     BRANDS
                 </button>
                 <ul class="dropdown-menu bg-dark text-center p-4 " style="box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.918);">
@@ -77,7 +81,7 @@
                 </ul>
               </div>
               <div style="display:flex; justify-content: center;">
-                <a class="Btn logOutButton"  >
+                <a class="Btn logOutButton mt-5"  >
                     <div class="sign"><svg viewBox="0 0 512 512"><path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"></path></svg></div>
                     <div class="textS">Logout</div>
                   </a>
