--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -88,10 +88,12 @@
                 </div>
             <% })} %>
             <% if(locals.products.length===0) { %>
-                <div class="col rounded border border-dark" style="border-radius: 20px !important;">
-                    <p class="text-center text-danger pt-5 pb-5 mainFontFamily" style="font-size: 25px;">
-                        <u>Your cart is empty!</u>
-                        <a href="/user/allProducts" class="mt-3" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn border border-black  btn-warning  rounded py-3 px-3">Continue Shopping</span></a>
+                <div class="col" style="border-radius: 20px !important;">
+                    <p class="text-center text-danger pt-5 pb-5 mainFontFamily" style="font-size: 20px;">
+                        Your cart is empty!
+                        <a href="/user/allProducts" class="mt-3 fs-6" style="display: flex; justify-content: center; text-decoration: none; color: black !important;">
+                            <span class="ms-2 rounded py-3 px-3">Continue Shopping <i class="ms-2 bi bi-arrow-right"></i></span>
+                        </a>
                     </p>
                 </div>
             <% } %>
