--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -81,10 +81,10 @@
                         </div>
                     <% })} %>
                     <% if(locals.products.length===0) { %>
-                        <div class="col" style="border: 1px solid black; border-radius: 20px;" >
-                            <p class="text-center text-danger pt-5 pb-5" style="font-size: 25px; font-family: 'Michroma', sans-serif;">
-                                <u>Your wishlist is empty!</u>
-                                <a href="/user/allProducts" class="mt-3" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn border border-black  btn-warning  rounded py-3 px-3">Continue Shopping</span></a>
+                        <div class="col"  >
+                            <p class="text-center text-danger pt-5 pb-5" style="font-size: 20px; font-family: 'Michroma', sans-serif;">
+                                Your wishlist is empty!
+                                <a href="/user/allProducts" class="mt-3" style="display: flex; justify-content: center; text-decoration: none; color: black !important; "><span class="fs-6 py-3 px-3">Continue Shopping <i class="ms-2 bi bi-arrow-right"></i></span></a>
                             </p>
                             
                         </div>
