--- a/views/user/detailedProduct.ejs
+++ b/views/user/detailedProduct.ejs
@@ -21,7 +21,7 @@
                     <% } else { %>
                         <% product?.images?.forEach((image, index) => { %>
                             <div class="col-6 pb-lg-0 pb-3 ">
-                                <div class="card" data-toggle="modal" data-target="#imageModal<%= index %>" style="padding: 0px !important; border: none !important;">
+                                <div class="card" data-toggle="modal" data-target="#imageModal<%= index %>" style="padding: 0px !important; ">
                                     <img src="<%= image %>" class="card-img-top productImageMain border" alt="..." >
                                     <div class="overlay">
                                         <i class="fa-solid fa-eye"></i>
